--- a/ajax/portfolio3.html
+++ b/ajax/portfolio3.html
@@ -4,13 +4,13 @@
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/giphygifs/1.PNG" alt="img"> 
+            <img src="ajax/portfolio/giphygifs/1.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/giphygifs/2.PNG" alt="img"> 
+            <img src="ajax/portfolio/giphygifs/2.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/giphygifs/3.PNG" alt="img"> 
+            <img src="ajax/portfolio/giphygifs/3.png" alt="img"> 
         </li>
     </ul>
 </div>
