--- a/ajax/portfolio5.html
+++ b/ajax/portfolio5.html
@@ -1,16 +1,13 @@
-<div class="cbp-l-project-title">maxVal</div>
-<div class="cbp-l-project-subtitle">Full Stack MERN Application</div>
+<div class="cbp-l-project-title">Bucket List</div>
+<div class="cbp-l-project-subtitle">Full Stack Web Application</div>
 
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/1.PNG" alt="img"> 
+            <img src="ajax/portfolio/bucketlist/1.PNG" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/2.PNG" alt="img"> 
-        </li>
-        <li class="cbp-slider-item">
-            <img src="ajax/portfolio/maxval/3.PNG" alt="img"> 
+            <img src="ajax/portfolio/bucketlist/2.PNG" alt="img"> 
         </li>
     </ul>
 </div>
@@ -19,19 +16,19 @@
     <div class="cbp-l-project-desc">
         <div class="cbp-l-project-desc-title"><span>Description</span></div>
         <div class="cbp-l-project-desc-text"> 
-            <p>A premier crowdsourced product valuation application for modern market research. maXval enables individuals and companies of any size to quickly evaluate their products in a simple and approachable platform. </p>
-            <p>Users are able to upload photos of their products, which are then rated based on other user's input. The ratings are stored in the database and are used to populate the product dashboard.</p> 
-            <p>This application was designed using React.js on the front-end and MongoDB, node.js, and express.js on the back-end.  The user authentication was built using Firebase, and charts.js was utilized to create the data visualization.</p>  
+            <p>An app designed to allow users to create and save their bucket lists using a photo.</p>
+            <p>When a user uploads their photo, Google Cloud Vision API analyzes the photo and returns information, which is used to populate the bucket list item.</p>
+            <p>This app uses passport.js for user authentication, mySQL and node.js for the back-end, and jQuery and handlebars to render the front-end content.</p>
         </div>
     </div>
     <div class="cbp-l-project-details">
         <div class="cbp-l-project-details-title"><span>Details</span></div>
 
         <ul class="cbp-l-project-details-list">
-            <li><strong>Technologies</strong>React.js, MongoDB, node.js, express.js, HTML, CSS, Javascript, charts.js, Firebase</li>
-            <li><strong>Date Created</strong>January 2018</li>
+            <li><strong>Technologies</strong>HTML, CSS, Javascript, jQuery, handlebars, mySQL, node.js, express.js, passport.js, Google Cloud Vision API</li>
+            <li><strong>Date Created</strong>November 2017</li>
         </ul>
-        <a href="http://maxval.herokuapp.com/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
+        <a href="https://the-bucket-list-app.herokuapp.com/" target="_blank" class="cbp-l-project-details-visit btn btn-dark">Launch App</a>
     </div>
 </div>
 <!-- 
