--- a/ajax/portfolio5.html
+++ b/ajax/portfolio5.html
@@ -4,10 +4,10 @@
 <div class="cbp-slider">
     <ul class="cbp-slider-wrap">
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bucketlist/1.PNG" alt="img"> 
+            <img src="ajax/portfolio/bucketlist/1.png" alt="img"> 
         </li>
         <li class="cbp-slider-item">
-            <img src="ajax/portfolio/bucketlist/2.PNG" alt="img"> 
+            <img src="ajax/portfolio/bucketlist/2.png" alt="img"> 
         </li>
     </ul>
 </div>
